{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 42,
  "lineage": "15acbd10-5f3b-2d76-15cd-db2983d99cb2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "shaillyvpc1_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f4372f2fc7d5dd0e",
            "public_dns": "ec2-15-207-33-155.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.33.155",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "shahbastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-073a8ab1b15e272e5",
            "arn": "arn:aws:ec2:ap-south-1:943159472880:instance/i-049dc73d5d08df759",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049dc73d5d08df759",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "shailly",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-099d369588329c9cc",
            "private_dns": "ip-192-168-0-122.ap-south-1.compute.internal",
            "private_ip": "192.168.0.122",
            "public_ip": "13.233.89.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06a29cf1d789b67c7",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-041a0de2ae5562fa4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0831444c2c2612880",
            "tags": {
              "Name": "shahbastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-041a0de2ae5562fa4"
            ]
          },
          "dependencies": [
            "aws_security_group.shahbastion",
            "aws_subnet.shaillyvpc1_subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "shahsqlsecure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c9b9770f41dc7de",
            "arn": "arn:aws:ec2:ap-south-1:943159472880:instance/i-063d11b6bdde7a1ba",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063d11b6bdde7a1ba",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "shailly",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a98821c8e60767d3",
            "private_dns": "ip-192-168-1-126.ap-south-1.compute.internal",
            "private_ip": "192.168.1.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cd9c3f8baf167b39",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-007bf8893009455a4",
              "sg-07c486c45ed31a28c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c1e54160a33037a",
            "tags": {
              "Name": "shahsqlsecure"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-007bf8893009455a4",
              "sg-07c486c45ed31a28c"
            ]
          },
          "dependencies": [
            "aws_security_group.mysql",
            "aws_security_group.shahsqlallow",
            "aws_subnet.shaillyvpc1_subnet-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "shahwordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cb39c5da8e2fa515",
            "arn": "arn:aws:ec2:ap-south-1:943159472880:instance/i-0b6423ce3fd0e98e4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6423ce3fd0e98e4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "shailly",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0863276282d79f7e7",
            "private_dns": "ip-192-168-0-158.ap-south-1.compute.internal",
            "private_ip": "192.168.0.158",
            "public_ip": "13.233.129.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00748152ce17d6934",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0adeb96e6c2c3ac91"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0831444c2c2612880",
            "tags": {
              "Name": "shahwordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0adeb96e6c2c3ac91"
            ]
          },
          "dependencies": [
            "aws_security_group.shaillyweb",
            "aws_subnet.shaillyvpc1_subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "shaillyvpc1_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:internet-gateway/igw-051521249e799cac7",
            "id": "igw-051521249e799cac7",
            "owner_id": "943159472880",
            "tags": {
              "Name": "shaillyvpc1_internet_gateway"
            },
            "vpc_id": "vpc-02d2b62c66e5a8893"
          },
          "dependencies": [
            "aws_vpc.shaillyvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "shaillyvpc1_nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4372f2fc7d5dd0e",
            "id": "nat-0808697af7f57d49e",
            "network_interface_id": "eni-0bbc958c25d258df6",
            "private_ip": "192.168.1.212",
            "public_ip": "15.207.33.155",
            "subnet_id": "subnet-04c1e54160a33037a",
            "tags": {
              "Name": "shaillyvpc1_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.shaillyvpc1_eip",
            "aws_subnet.shaillyvpc1_subnet-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shaillyvpc1_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b7568cec60e0d2c6",
            "owner_id": "943159472880",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051521249e799cac7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shaillyvpc1_route_table"
            },
            "vpc_id": "vpc-02d2b62c66e5a8893"
          },
          "dependencies": [
            "aws_internet_gateway.shaillyvpc1_internet_gateway",
            "aws_vpc.shaillyvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shaillyvpc1_route_table2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-034e9dfd26fa158bc",
            "owner_id": "943159472880",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0808697af7f57d49e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-02d2b62c66e5a8893"
          },
          "dependencies": [
            "aws_eip.shaillyvpc1_eip",
            "aws_nat_gateway.shaillyvpc1_nat_gateway",
            "aws_subnet.shaillyvpc1_subnet-1b",
            "aws_vpc.shaillyvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5bce0084bb43aa8",
            "route_table_id": "rtb-0b7568cec60e0d2c6",
            "subnet_id": "subnet-0831444c2c2612880"
          },
          "dependencies": [
            "aws_route_table.shaillyvpc1_route_table",
            "aws_subnet.shaillyvpc1_subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:security-group/sg-07c486c45ed31a28c",
            "description": "Allow sql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c486c45ed31a28c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0adeb96e6c2c3ac91"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "shaillysql",
            "name_prefix": null,
            "owner_id": "943159472880",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shaillysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d2b62c66e5a8893"
          },
          "dependencies": [
            "aws_security_group.shaillyweb",
            "aws_vpc.shaillyvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shahbastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:security-group/sg-041a0de2ae5562fa4",
            "description": "Allow ssh for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041a0de2ae5562fa4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "shahbastion",
            "name_prefix": null,
            "owner_id": "943159472880",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shahbastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d2b62c66e5a8893"
          },
          "dependencies": [
            "aws_vpc.shaillyvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shahsqlallow",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:security-group/sg-007bf8893009455a4",
            "description": "ssh allow to the mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007bf8893009455a4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041a0de2ae5562fa4"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "shahsqlallow",
            "name_prefix": null,
            "owner_id": "943159472880",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shahsqlallow"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d2b62c66e5a8893"
          },
          "dependencies": [
            "aws_security_group.shahbastion",
            "aws_vpc.shaillyvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shaillyweb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:security-group/sg-0adeb96e6c2c3ac91",
            "description": "Allow ssh http and icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adeb96e6c2c3ac91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP-IPv4",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "shaillyweb",
            "name_prefix": null,
            "owner_id": "943159472880",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shaillyweb"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d2b62c66e5a8893"
          },
          "dependencies": [
            "aws_vpc.shaillyvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shaillyvpc1_subnet-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:subnet/subnet-0831444c2c2612880",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0831444c2c2612880",
            "map_public_ip_on_launch": true,
            "owner_id": "943159472880",
            "vpc_id": "vpc-02d2b62c66e5a8893"
          },
          "dependencies": [
            "aws_vpc.shaillyvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shaillyvpc1_subnet-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:subnet/subnet-04c1e54160a33037a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-04c1e54160a33037a",
            "map_public_ip_on_launch": false,
            "owner_id": "943159472880",
            "vpc_id": "vpc-02d2b62c66e5a8893"
          },
          "dependencies": [
            "aws_vpc.shaillyvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shaillyvpc1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943159472880:vpc/vpc-02d2b62c66e5a8893",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-05e347507a2fe2e32",
            "default_route_table_id": "rtb-00f121f6932a56931",
            "default_security_group_id": "sg-05e98dfa9f7c6174d",
            "dhcp_options_id": "dopt-03fa965942efb20c3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02d2b62c66e5a8893",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00f121f6932a56931",
            "owner_id": "943159472880",
            "tags": {
              "Name": "shaillyvpc1"
            }
          }
        }
      ]
    }
  ]
}